变更方法签名